[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Character/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scripts/State/Attack.gd" type="Script" id=2]
[ext_resource path="res://Scripts/State/Move.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Weapon/Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/State/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Enemy/dummy_enemy.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Character/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Weapon/Hurtbox.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.71482
height = 4.56489

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="HealthBar" parent="Sprite" instance=ExtResource( 7 )]
visible = false
margin_left = -12.0
margin_top = -15.0
margin_right = 12.0
margin_bottom = -13.0

[node name="FacingPivot" type="Node2D" parent="Sprite"]

[node name="Weapon" parent="Sprite/FacingPivot" instance=ExtResource( 4 )]
visible = false
position = Vector2( 12, 0 )
rotation = 1.5708

[node name="WorldCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
ACTOR_NODE = NodePath("..")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
MOVE_SPEED = 50

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
[connection signal="attack_finished" from="Sprite/FacingPivot/Weapon" to="." method="_on_attack_finished"]
[connection signal="attack_range_entered" from="Sprite/FacingPivot/Weapon" to="." method="_on_attack_range_entered"]
[connection signal="damaged" from="HurtBox" to="." method="_on_hit"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_target_detected"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_target_lost"]
